<resources>
    <string name="app_name">SendMeal</string>
    <string name="txt_name">Nombre</string>
    <string name="txt_password">Contraseña</string>
    <string name="txt_repeat_password">Repetir contraseña</string>
    <string name="txt_email">Email</string>
    <string name="txt_card_type">Tipo de tarjeta:</string>
    <string name="txt_debit">Débito</string>
    <string name="txt_credit">Crédito</string>
    <string name="txt_card_number">Número de tarjeta</string>
    <string name="txt_ccv">CCV</string>
    <string name="txt_due_date">Fecha de vencimiento</string>
    <string name="txt_cbu">CBU</string>
    <string name="txt_alias_cbu">Alias CBU</string>
    <string name="txt_initial_load">¿Realizar carga inicial?</string>
    <string name="txt_initial_credit">Credito inicial</string>
    <string name="txt_acept_tnc">Acepto los terminos y condiciones</string>
    <string name="btn_register">Registrar</string>.
    <string name="err_email">Introduzca un email válido</string>
    <string name="err_pass">La contraseña debe tener entre 4 y 15 caracteres</string>
    <string name="err_repeat_pass">Las contraseñas deben ser iguales</string>
    <string name="err_type_card">Elija un tipo de tarjeta</string>
    <string name="err_num_card">Número de tarjeta incorrecto</string>
    <string name="err_ccv">CCV incorrecto</string>
    <string name="err_due_card">Vencimiento debe superar los 3 meses</string>
    <string name="err_init_credit">La carga debe ser mayor a cero</string>
    <string name="msg_registered">Registrado con exitos!!</string>
    <string name="msg_welcome">Bienvenido!!!</string>
    <string name="txt_sing_in">Registrarme</string>
    <string name="txt_create_item">Crear Item</string>
    <string name="txt_item_list">Lista de items</string>
    <string name="txt_go_back">Atrás</string>
    <string name="txt_new_item">Nuevo Plato</string>
    <string name="txt_title">Título</string>
    <string name="txt_description">Descripción</string>
    <string name="txt_price">Precio</string>
    <string name="txt_calories">Calorías</string>
    <string name="txt_save">Guardar</string>
    <string name="msg_item_created">El plato fue creado</string>
    <string name="txt_order">Pedir</string>
</resources>