<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="5dp"
    android:paddingRight="5dp"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/editText_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/txt_name"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/editText_pass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/txt_password"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/editText_pass_repeat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/txt_repeat_password"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/editText_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/txt_email"
        android:inputType="textEmailAddress" />

    <TextView
        android:id="@+id/textView_cardType"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:text="@string/txt_card_type" />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/rBtn_credit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/txt_debit" />

        <RadioButton
            android:id="@+id/rBtn_debit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/txt_credit" />
    </RadioGroup>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/editText_numCard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:ems="10"
            android:hint="@string/txt_card_number"
            android:inputType="number" />

        <EditText
            android:id="@+id/editText_ccv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:enabled="false"
            android:hint="@string/txt_ccv"
            android:inputType="textNoSuggestions|number" />

    </LinearLayout>

    <TextView
        android:id="@+id/textView_due_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_due_date" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Spinner
            android:id="@+id/spinner_month"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <Spinner
            android:id="@+id/spinner_year"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />
    </LinearLayout>

    <EditText
        android:id="@+id/editText_cbu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/txt_cbu"
        android:inputType="number" />

    <EditText
        android:id="@+id/editText_aliasCbu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/txt_alias_cbu"
        android:inputType="textPersonName" />

    <Switch
        android:id="@+id/switch_initCredit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:text="@string/txt_initial_load"
        tools:ignore="UseSwitchCompatOrMaterialXml" />

    <LinearLayout
        android:id="@+id/layout_initCredit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="invisible">

        <TextView
            android:id="@+id/textView_initCredit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_initial_credit" />

        <SeekBar
            android:id="@+id/seekBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:max="1500" />
    </LinearLayout>

    <CheckBox
        android:id="@+id/checkBox_tnc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/txt_acept_tnc" />

    <Button
        android:id="@+id/btn_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:enabled="false"
        android:text="@string/btn_register" />

</LinearLayout>