<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".CreateItemActivity">

    <include
        android:id="@+id/toolbar_createItem"
        layout="@layout/tool_bar" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_new_item"
        android:textSize="@dimen/txt_32sp" />

    <EditText
        android:id="@+id/editText_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:autofillHints=""
        android:hint="@string/txt_title"
        android:inputType="text" />

    <TextView
        android:id="@+id/textView_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/txt_description"
        android:textSize="@dimen/txt_18sp" />

    <EditText
        android:id="@+id/editText_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:autofillHints=""
        android:inputType="text|textMultiLine" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/editText_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:autofillHints=""
            android:hint="@string/txt_price"
            android:inputType="number|numberDecimal" />

        <EditText
            android:id="@+id/editText_calories"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:autofillHints=""
            android:hint="@string/txt_calories"
            android:inputType="number" />

    </LinearLayout>

    <Button
        android:id="@+id/btn_saveItem"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:enabled="false"
        android:padding="15dp"
        android:text="@string/txt_save"
        android:textSize="@dimen/txt_18sp" />
</LinearLayout>